# ift

./: CMakeLists.txt  Dockerfile  MO445_ASSIGNMENT_DETAILS.md  MO445_COURSE_INFO.md  MO445_SETUP_COMPLETE.md  Makefile  README.md  environment.yml  requirements.txt  start_mo445.sh  test_mo445_environment.py
demo/BrainAsymmetryAnalysis/: CMakeLists.txt
demo/BrainAsymmetryAnalysis/CodesEMBC/: compute_detection_accuracy_thesis.py  compute_dice_thesis.py  compute_false_positive_svoxels_thesis.py  iftDetectionAccuracyEMBC.c
demo/BrainAsymmetryAnalysis/MultiNativeSAAD/: classify_asymmetries_by_ocsvm.py  iftBrainAbsSub.c  iftExtractMultiNativeSupervoxelHAAFeats.c  iftExtractMultiNativeSupervoxelHAAFeats_Sol2.c  iftExtractMultiNativeTrainAsymMaps.c  iftExtractMultiNativeTrainAsymMaps_Sol2.c  iftMultiNativeAdaProSegmentation.c  iftMultiNativeAtlasSelectionByNMI.c  iftMultiNativeBrainAsymMap.c  iftMultiNativeSymmISF.c  iftMultiRegisterSymmObjects.c  iftMultiRegisterTemplateToNative.c  run_multi_native_SAAD.py
demo/BrainAsymmetryAnalysis/NativeSAAD/: classify_asymmetries_by_ocsvm.py  iftExtractNativeSupervoxelHAAFeats.c  iftNativeAdaProSegmentation.c  iftNativeAsymMap.c  iftNativeSymmISF.c  iftRegisterSymmObjects.c  iftRegisterTestToTemplate.c  run_native_SAAD.py  run_native_SAAD_without_hist_matching.py
demo/BrainAsymmetryAnalysis/SAAD/: classify_asymmetries_by_ocsvm.py  iftAsymMap.c  iftAsymMapSet.c  iftExtractPatchesInSymmSVoxels.c  iftExtractSupervoxelBICFeats.c  iftExtractSupervoxelHAAFeats.c  iftSymmISF.c  (+9 more)
demo/LargeMargin/: CMakeLists.txt  Untitled.ipynb  baysopt.ipynb  iftKernelLMIrisDemo.c  iftLargeImageMarginDyn.c  iftLargeMarginDynamic.c  iftLargeMarginIrisDemo.c  iftLargeMarginOPF.c  opt.py  prog.py
(+3261 files in other folders)
